force-app/main/default/objects/Retail_Lead_Visit__c/Retail_Lead_Visit__c.object-meta.xml
<CustomObject>
    <label>Retail Lead Visit</label>
    <nameField>
        <displayFormat>RLV-{0000}</displayFormat>
        <label>Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Lead Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>