force-app/main/default/objects/Retail_Lead_Visit__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lead Name</label>
    <referenceTo>Retail_Lead__c</referenceTo>
    <relationshipLabel>Retail Lead Visits</relationshipLabel>
    <relationshipName>Retail_Lead_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>