force-app/main/default/objects/Retail_Lead_Visit__c/fields/Level_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Interest__c</fullName>
    <label>Level of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Lead</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Incomplete Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>