force-app/main/default/objects/Retail_Lead_Visit__c/fields/Linked_Customer__c.field-meta.xml
<CustomField>
    <fullName>Linked_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Customer</label>
    <referenceTo>Retail_Customer__c</referenceTo>
    <relationshipLabel>Retail Lead Visits</relationshipLabel>
    <relationshipName>Retail_Lead_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>