force-app/main/default/objects/Retail_Lead_Visit__c/fields/New_Lead_Counter__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Counter__c</fullName>
    <label>New Lead Counter</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>