force-app/main/default/objects/Retail_Lead_Visit__c/fields/Old_Lead_Counter__c.field-meta.xml
<CustomField>
    <fullName>Old_Lead_Counter__c</fullName>
    <label>Old Lead Counter</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>