force-app/main/default/objects/Retail_Lead_Visit__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order ID</label>
    <referenceTo>Retail_Order__c</referenceTo>
    <relationshipLabel>Retail Lead Visits</relationshipLabel>
    <relationshipName>Retail_Lead_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>