force-app/main/default/objects/Retail_Lead_Visit__c/fields/Other_Reason_For_Cold__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_For_Cold__c</fullName>
    <label>Other Reason For Cold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>