force-app/main/default/objects/Retail_Lead_Visit__c/fields/Reason_for_Cold_Lead__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cold_Lead__c</fullName>
    <label>Reason for Cold Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price too high</fullName>
            </value>
            <value>
                <fullName>Already bought from elsewhere</fullName>
            </value>
            <value>
                <fullName>Delivery too slow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>