force-app/main/default/objects/Retail_Lead_Visit__c/fields/Retail_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Retail_Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Product Group</label>
    <referenceTo>Retail_Product_Group__c</referenceTo>
    <relationshipLabel>Retail Lead Visits</relationshipLabel>
    <relationshipName>Retail_Lead_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>