force-app/main/default/objects/Retail_Lead_Visit__c/fields/Seller_ID__c.field-meta.xml
<CustomField>
    <fullName>Seller_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller ID</label>
    <referenceTo>Retail_Customer__c</referenceTo>
    <relationshipLabel>Retail Lead Visits (Seller ID)</relationshipLabel>
    <relationshipName>Retail_Lead_Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>