force-app/main/default/objects/Retail_Lead_Visit__c/fields/Visit_Counter__c.field-meta.xml
<CustomField>
    <fullName>Visit_Counter__c</fullName>
    <label>Visit Counter</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>