force-app/main/default/objects/Retail_Lead_Visit__c/fields/Visit_Owner__c.field-meta.xml
<CustomField>
    <fullName>Visit_Owner__c</fullName>
    <defaultValue>$User.Username</defaultValue>
    <label>Visit Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>