force-app/main/default/objects/Retail_Lead_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Lead_Name__c</columns>
    <columns>Linked_Customer__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>Sale_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>New_Lead__c</columns>
    <columns>Old_Lead_Counter__c</columns>
    <columns>New_Lead_Counter__c</columns>
    <columns>Level_of_Interest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>