force-app/main/default/objects/Retail_Lead_Visit__c/listViews/Lead.listView-meta.xml
<ListView>
    <fullName>Lead</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Visit_Owner__c</columns>
    <columns>Level_of_Interest__c</columns>
    <columns>New_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level_of_Interest__c</field>
        <operation>notEqual</operation>
        <value>Incomplete Data</value>
    </filters>
    <label>Lead-wise Visits</label>
</ListView>