force-app/main/default/objects/Retail_Lead_Visit__c/listViews/Visit_Counter.listView-meta.xml
<ListView>
    <fullName>Visit_Counter</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Lead_Name__c</columns>
    <columns>Level_of_Interest__c</columns>
    <columns>Follow_up_Date__c</columns>
    <columns>Visit_Counter__c</columns>
    <columns>New_Lead__c</columns>
    <columns>Old_Lead_Counter__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level_of_Interest__c</field>
        <operation>notContain</operation>
        <value>Incomplete Data</value>
    </filters>
    <label>Visit Counter</label>
</ListView>